Added reference for Psychophysiological paper that was mentioned by one of the HRI reviewer --Mahi

--- a/Paper/HRI-16.tex
+++ b/Paper/HRI-16.tex
@@ -258,6 +258,9 @@ possesses the cognitive capacity to provide good, informative
 demonstrations.  Our work allows robots to make this determination for
 themselves.
 
+Researchers outside of robotics community also made efforts in measuring cognitive load
+of human operator. For example, one those research works\cite{wilson2003real} used eye blink, heart beat, electroencephalogram(EEG) as indicator to human cognitive stress. They were able to classify human stress level based on six Psycho-physiological features using neural network with high accuracy. They also identified some additional features that can contribute to human cognitive stress. However,as mentioned, their focus was not particularly on robotics. Moreover some of the features may be hard to measure in real time robotic operations. How research not only focuses on the estimating of cognitive load but also tries to come up with learned model understanding the cognitive load in a more generic sense from robotics perspectives.  
+
 We have mentioned a number of research results that relate to ours in
 many ways.  However, most current work does not explore the fact that,
 although humans are much more intelligent than robots, they
