--- a/Paper/ROMAN-16.tex
+++ b/Paper/ROMAN-16.tex
@@ -2,6 +2,9 @@
 \usepackage{amsmath,amsfonts}
 \usepackage{multirow}
 
+\usepackage{subfig}
+\usepackage{subfloat}
+
 \begin{document}
 
 \title{Learning to Assess the Cognitive Capacity of Human Partners}
@@ -685,9 +688,7 @@ assistance based on the disparity, damage and time delay it produces,
 even though these figures are calculated based on invalid assumptions
 about the nature of the game.  Nevertheless, the robot feeds these
 metrics into the classifier that was learned in the maze game to
-produce a ``trustworthy'' or ``untrustworthy'' output.  It has no
-access to a formula to make this determination, since the maze game
-formula is specific to that well-understood problem.
+produce a real number ranging between 0 to 1 as output. We have defined this number as Cognitive Load Estimate(CLE) of the human operator by the robot where higher CLE means higher stress level of the human operator. It has no access to a formula to make this determination, since the maze game formula is specific to that well-understood problem.
 
 %We have set two scenarios in this experiment. The first scenario, is the single human operator one or more robots team. In this scenario only one human operator was allowed to assist the human-robot team. We have set a timer for the human operator as 2 minutes and also set maximum 5 coin collection limit. Either condition satisfies the end of the game. Every time the robot collects a coin the timer is shortened by 12 seconds to put more cognitive stress on human operator. In the second scenario, multiple one or more robots were teamed up with two human operators. The initial timer was set to 1 minute and a maximum of ten coins were allowed to collect. Either condition satisfied he end of the game.
 
@@ -696,23 +697,44 @@ formula is specific to that well-understood problem.
 Analysis of the results from the coin game experiment are in agreement
 with the original hypothesis. In general, the robot correctly predicts
 the cognitive load that its operator was under in every
-scenario. These findings can be seen in Fig~\ref{fig:final-results}.
-Here, the $x$ axis denotes an increase in task complexity over time;
-the user must issue an increasing number of commands and collect coins
-in an increasingly short duration. It is critical for interpreting the
-information in \ref{fig:final-results} to note that while the robot's
+scenario. These findings can be seen in Fig.~\ref{fig:final-results}.
+Here, the horizontal axis denotes $\hat{\delta}$ which the robot's estimate of cognitive load or CLE of human operator. The vertical axis denotes our observed CLE $\hat{\gamma}$ of human operator by a human observer. We have sampled both $\hat{\delta}$ and $\hat{\gamma}$ at every 12 seconds and took the average of all the users CLE and observed stress level. The task complexity was increased by the magnitude of one additional robot; as shown inf Fig. ~\ref{fig:final-results_a} and ~\ref{fig:final-results_b} respectively. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
+information in Fig. ~\ref{fig:final-results} to note that while the robot's
 cognitive load evaluation and the scoring technique for quantifying
-self-reported user stress both produce a result between zero and one
-\textit{their magnitudes are not directly comparable}.  The points at
+observed user stress both produce a result between zero and one
+\textit{their magnitudes are not directly comparable}. The points at
 which stress was identified, and the shape of the curves, however, are
-appropriate to compare.  Whenever cognitive stress occurs or changes,
+appropriate to compare. Thus the cross correlation between the $\hat{\delta}$ and $\hat{\gamma}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig. \ref{fig:final-results} shows that this model has a 86.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
 the robot is able to recognize this increase for most cases in the
-tested scenarios, and the robot's evaluation agrees with self-reported
+tested scenarios, and the robot's evaluation agrees with observed
 user stress.  In the context of this paper, it also supports the
 original hypothesis: robots can are able to reliably assess the
 cognitive strain their human partners are under, even in contexts
 where the actual tasks they are being asked to perform are opaque to
 the robot.
+
+% ********* 12 sec interval graph. not using this ************
+%Analysis of the results from the coin game experiment are in agreement
+%with the original hypothesis. In general, the robot correctly predicts
+%the cognitive load that its operator was under in every
+%scenario. These findings can be seen in Fig.~\ref{fig:final-results}.
+%Here, the horizontal axis denotes time in second the coin game was played and also denotes an increase in task complexity over time;
+%the user must issue an increasing number of commands and collect coins
+%in an increasingly short duration. The task complexity was also increased by the magnitude of one additional robot. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
+%information in \ref{fig:final-results} to note that while the robot's
+%cognitive load evaluation and the scoring technique for quantifying
+%self-reported user stress both produce a result between zero and one
+%\textit{their magnitudes are not directly comparable}.  The points at
+%which stress was identified, and the shape of the curves, however, are
+%appropriate to compare.  Whenever cognitive stress occurs or changes,
+%the robot is able to recognize this increase for most cases in the
+%tested scenarios, and the robot's evaluation agrees with self-reported
+%user stress.  In the context of this paper, it also supports the
+%original hypothesis: robots can are able to reliably assess the
+%cognitive strain their human partners are under, even in contexts
+%where the actual tasks they are being asked to perform are opaque to
+%the robot.
+% ********* 12 sec interval graph. not using this END ************
 
 %Six people who participated in first experiment also participated in
 %the second experiment. We have found that the learned model of
@@ -734,8 +756,8 @@ the robot.
 
 \begin{figure}  
 \centering
-\includegraphics[width=.25\textwidth]{final-legend.eps}
-\includegraphics[width=.5\textwidth]{final-results.png}
+\subfloat[One robot]{\label{fig:final-results_a}\includegraphics[width=.5\textwidth]{One_Robot_vs_Observer_CLE.eps}}\\
+\subfloat[Two robots]{\label{fig:final-results_b}\includegraphics[width=.5\textwidth]{Two_Robots_vs_Observer_CLE.eps}}	
 \caption{Cognitive load of human operator in Coin Game experiments with differing numbers of robots and steadily increasing task complexity.}
 \label{fig:final-results}
 \end{figure}
