--- a/Paper/ROMAN-16.tex
+++ b/Paper/ROMAN-16.tex
@@ -698,13 +698,13 @@ Analysis of the results from the coin game experiment are in agreement
 with the original hypothesis. In general, the robot correctly predicts
 the cognitive load that its operator was under in every
 scenario. These findings can be seen in Fig.~\ref{fig:final-results}.
-Here, the horizontal axis denotes $\hat{\delta}$ which the robot's estimate of cognitive load or CLE of human operator. The vertical axis denotes our observed CLE $\hat{\gamma}$ of human operator by a human observer. We have sampled both $\hat{\delta}$ and $\hat{\gamma}$ at every 12 seconds and took the average of all the users CLE and observed stress level. The task complexity was increased by the magnitude of one additional robot; as shown inf Fig. ~\ref{fig:final-results_a} and ~\ref{fig:final-results_b} respectively. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
-information in Fig. ~\ref{fig:final-results} to note that while the robot's
+Here, the horizontal axis denotes $\hat{\delta}$ which the robot's estimate of cognitive load or CLE of human operator. The vertical axis denotes our observed CLE $\hat{\gamma}$ of human operator by a human observer. We have sampled both $\hat{\delta}$ and $\hat{\gamma}$ at every 12 seconds and took the average of all the users CLE and observed stress level. The task complexity was increased by the magnitude of one additional robot; as shown in Fig.~\ref{fig:final-results_a} and ~\ref{fig:final-results_b} respectively. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
+information in Fig.~\ref{fig:final-results} to note that while the robot's
 cognitive load evaluation and the scoring technique for quantifying
 observed user stress both produce a result between zero and one
 \textit{their magnitudes are not directly comparable}. The points at
 which stress was identified, and the shape of the curves, however, are
-appropriate to compare. Thus the cross correlation between the $\hat{\delta}$ and $\hat{\gamma}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig. \ref{fig:final-results} shows that this model has a 86.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
+appropriate to compare. Thus the cross correlation between the $\hat{\delta}$ and $\hat{\gamma}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig.\ref{fig:final-results} shows that this model has a 86.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
 the robot is able to recognize this increase for most cases in the
 tested scenarios, and the robot's evaluation agrees with observed
 user stress.  In the context of this paper, it also supports the
@@ -712,6 +712,14 @@ original hypothesis: robots can are able to reliably assess the
 cognitive strain their human partners are under, even in contexts
 where the actual tasks they are being asked to perform are opaque to
 the robot.
+
+\begin{figure}  
+\centering
+\subfloat[One robot]{\label{fig:final-results_a}\includegraphics[width=.5\textwidth]{One_Robot_vs_Observer_CLE.eps}}\\
+\subfloat[Two robots]{\label{fig:final-results_b}\includegraphics[width=.5\textwidth]{Two_Robots_vs_Observer_CLE.eps}}	
+\caption{Cognitive load of human operator in Coin Game experiments with differing numbers of robots and steadily increasing task complexity.}
+\label{fig:final-results}
+\end{figure}
 
 % ********* 12 sec interval graph. not using this ************
 %Analysis of the results from the coin game experiment are in agreement
@@ -754,13 +762,7 @@ the robot.
 %on matching classification on different level of complexities are
 %shown in the following Fig\ref{fig:final-results}:
 
-\begin{figure}  
-\centering
-\subfloat[One robot]{\label{fig:final-results_a}\includegraphics[width=.5\textwidth]{One_Robot_vs_Observer_CLE.eps}}\\
-\subfloat[Two robots]{\label{fig:final-results_b}\includegraphics[width=.5\textwidth]{Two_Robots_vs_Observer_CLE.eps}}	
-\caption{Cognitive load of human operator in Coin Game experiments with differing numbers of robots and steadily increasing task complexity.}
-\label{fig:final-results}
-\end{figure}
+
 
 \section{Conclusions}
 
