--- a/Paper/ROMAN-16.tex
+++ b/Paper/ROMAN-16.tex
@@ -149,9 +149,9 @@ than continue to follow the direction of a human who is no longer able
 to provide appropriate assistance.
 
 In this paper, we have designed robots that learn the correlations
-between quantifiable behavior metrics and the cognitive capabilities
+between quantifiable behaviour metrics and the cognitive capabilities
 of human operators.  We designed a maze game
-(Fig. \ref{fig:game_photo}) where multiple robots are given directions
+(Fig.\ref{fig:game_photo}) where multiple robots are given directions
 by a single human operator.  At first, the robots' objective was
 simply to complete the maze, a task that they were capable of
 executing without human assistance using autonomous path planning.
@@ -708,7 +708,7 @@ appropriate to compare. Thus the cross correlation between the $\hat{\delta}$ an
 the robot is able to recognize this increase for most cases in the
 tested scenarios, and the robot's evaluation agrees with observed
 user stress.  In the context of this paper, it also supports the
-original hypothesis: robots can are able to reliably assess the
+original hypothesis: robots are able to reliably assess the
 cognitive strain their human partners are under, even in contexts
 where the actual tasks they are being asked to perform are opaque to
 the robot.
@@ -784,7 +784,7 @@ important finding is that the threshold beyond which cognitive stress
 produces untrustworthy human assistance may vary from task to task.
 Nevertheless, general metrics can transfer from problem to problem and
 still produce meaningful evaluations.  In the future, we plan to
-extend this research into complex heterogenous teams of humans and
+extend this research into complex heterogeneous teams of humans and
 robots performing real-world tasks.
 
 Every day humans interact with more and more technologies that require
@@ -817,7 +817,7 @@ similar determinations about us.
 
 
 \section{Acknowledgments}
-Acknowledgments are redacted for anonymity during the review process.
+Acknowledgements are redacted for anonymity during the review process.
 
 %We would like to thank Robotic Cognition Laboratory of Computer Science Department of Oklahoma State University for facilitating this project. We would also like to thank all the people who participated in the project as human operator voluntarily.
 
