Typo and formatting

--- a/Paper/ROMAN-16.tex
+++ b/Paper/ROMAN-16.tex
@@ -698,13 +698,13 @@ Analysis of the results from the coin game experiment are in agreement
 with the original hypothesis. In general, the robot correctly predicts
 the cognitive load that its operator was under in every
 scenario. These findings can be seen in Fig.~\ref{fig:final-results}.
-Here, the horizontal axis denotes $\hat{\delta}$ which the robot's estimate of cognitive load or CLE of human operator. The vertical axis denotes our observed CLE $\hat{\gamma}$ of human operator by a human observer. We have sampled both $\hat{\delta}$ and $\hat{\gamma}$ at every 12 seconds and took the average of all the users CLE and observed stress level. The task complexity was increased by the magnitude of one additional robot; as shown in Fig.~\ref{fig:final-results_a} and ~\ref{fig:final-results_b} respectively. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
+Here, the horizontal axis denotes $\hat{s}$ which the robot's estimate of cognitive load or CLE of human operator. The vertical axis denotes our observed CLE $\hat{o}$ of human operator by a human observer. We have sampled both $\hat{s}$ and $\hat{o}$ at every 12 seconds and took the average of all the users CLE and observed stress level. The task complexity was increased by the magnitude of one additional robot; as shown in Fig.~\ref{fig:final-results_a} and ~\ref{fig:final-results_b} respectively. The graph plots the average CLE of all the human operator participated in the game by the robot and our observation of the human operator. It is critical for interpreting the
 information in Fig.~\ref{fig:final-results} to note that while the robot's
 cognitive load evaluation and the scoring technique for quantifying
 observed user stress both produce a result between zero and one
 \textit{their magnitudes are not directly comparable}. The points at
 which stress was identified, and the shape of the curves, however, are
-appropriate to compare. Thus the cross correlation between the $\hat{\delta}$ and $\hat{\gamma}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig.\ref{fig:final-results} shows that this model has a 86.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
+appropriate to compare. Thus the cross correlation between the $\hat{s}$ and $\hat{o}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig.\ref{fig:final-results} shows that this model has a 86.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
 the robot is able to recognize this increase for most cases in the
 tested scenarios, and the robot's evaluation agrees with observed
 user stress.  In the context of this paper, it also supports the
