Fig Desc and rename fig

--- a/Paper/ROMAN-16.tex
+++ b/Paper/ROMAN-16.tex
@@ -705,7 +705,7 @@ cognitive load evaluation and the scoring technique for quantifying
 observed user stress both produce a result between zero and one
 \textit{their magnitudes are not directly comparable}. The points at
 which stress was identified, and the shape of the curves, however, are
-appropriate to compare. Thus the cross correlation between the $\hat{s}$ and $\hat{o}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig.\ref{fig:final-results} shows that this model has a 18.7\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
+appropriate to compare. Thus the cross correlation between the $\hat{s}$ and $\hat{o}$ can tell us how our model calculated the CLE with respect to actual observation of human operator by a human observer. Fig.\ref{fig:final-results} shows that this model has a 18.14\% correlation with actual observed CLE. Whenever cognitive stress occurs or changes,
 the robot is able to recognize this increase for most cases in the
 tested scenarios, and the robot's evaluation agrees with observed
 user stress.  In the context of this paper, it also supports the
@@ -716,11 +716,13 @@ the robot.
 
 \begin{figure}  
 \centering
-\subfloat[One robot]{\label{fig:final-results_a}\includegraphics[width=.5\textwidth]{One_Robot_vs_Observer_CLE.eps}}\\
-\subfloat[Two robots]{\label{fig:final-results_b}\includegraphics[width=.5\textwidth]{Two_Robots_vs_Observer_CLE.eps}}	
+\subfloat[One robot]{\label{fig:final-results_a}\includegraphics[width=.5\textwidth]{CLE_reg_One_robot.eps}}\\
+\subfloat[Two robots]{\label{fig:final-results_b}\includegraphics[width=.5\textwidth]{CLE_reg_Two_robot.eps}}	
 \caption{Cognitive load of human operator in Coin Game experiments with differing numbers of robots and steadily increasing task complexity.}
 \label{fig:final-results}
 \end{figure}
+
+
 
 % ********* 12 sec interval graph. not using this ************
 %Analysis of the results from the coin game experiment are in agreement
