mahi-- some text on auto mood

--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -561,7 +561,7 @@ In the coin game the human operator could interact with the robots using two int
 While using web interface, in order to compare the robot's estimate of cognitive capacity with
 reality, test subjects were asked during the experiment to rate their
 own cognitive stress levels at 12-second intervals using a Likert
-scale. The human operators who participated using Rviz were given a physilogical activity monitor\footnote{https://www.zephyranywhere.com/products/bioharness-3} to attach to their chest to monitor their heart rate, breathing rate, posture, ECG amplitudes and they were also being montitored by a human evaluator who rated and logged their cognitive stress level while they were playing the game. In other words human(coder) evaluator serves here as an subjective evaluator whreas the physiological metrics provides objective evaluation. We have found posture of human operator most likely correlates with subjective correlation with the code evaluation. One possible reason behind this is that posture is one of the visible observation that the coder can have while evaluating the operator. The coder rated stress level high when the operator tends to lean toward the screen of the computer when he or lean back on the chair Fig.\ref{fig:coder_vs_posture} which is intuitive.
+scale. The human operators who participated using Rviz were given a physilogical activity monitor\footnote{https://www.zephyranywhere.com/products/bioharness-3} to attach to their chest to monitor their heart rate, breathing rate, posture, ECG amplitudes and they were also being montitored by a human evaluator who rated and logged their cognitive stress level while they were playing the game. In other words human(coder) evaluator serves here as an subjective evaluator whreas the physiological metrics provides objective evaluation. We have found posture of human operator most likely correlates with subjective correlation with the code evaluation  Fig.\ref{fig:coder_vs_posture}. One possible reason behind this is that posture is one of the visible observation that the coder can have while evaluating the operator. The coder rated stress level high when the operator tends to lean toward the screen of the computer when he or lean back on the chair. Other physiological metrics does not higly correlates with coder evaluation of stress level.
 
 \begin{figure}  
 \centering
@@ -570,6 +570,7 @@ scale. The human operators who participated using Rviz were given a physilogical
 \label{fig:coder_vs_posture}
 \end{figure}
 
+The coin game also had a autonomous assistant configuration where the robot starts to navigate the maze autonomously not knowing where the coin is. Robot can pick the coin if crossed over it.The autonomous mood was activated by the robot if it found the human operator to be untrustworthy; the stress level is higher than a threshold. The threshold that we have set for our experiment was 55\% based on the data that we have collected from the non autonomous or manual mood. If the ignorance time which is the duration while no commands were given to that particular robot was higher than a threshold the robot switched to autonomous mood as well. In autonomous mood robot assumes that the coin can show up anywhere in the maze thus moves towards the optimum way point from where it the expected distance from a coin is minimum. 
 %We have set two scenarios in this experiment. The first scenario, is the single human operator one or more robots team. In this scenario only one human operator was allowed to assist the human-robot team. We have set a timer for the human operator as 2 minutes and also set maximum 5 coin collection limit. Either condition satisfies the end of the game. Every time the robot collects a coin the timer is shortened by 12 seconds to put more cognitive stress on human operator. In the second scenario, multiple one or more robots were teamed up with two human operators. The initial timer was set to 1 minute and a maximum of ten coins were allowed to collect. Either condition satisfied he end of the game.
 
 \subsection{Coin Game Results}
