--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -1,5 +1,6 @@
 \documentclass{sig-alternate}
 \usepackage{amsmath,amsfonts}
+\usepackage{booktabs}
 \usepackage{multirow}
 
 \begin{document}
@@ -577,7 +578,12 @@ Analysis of the results from the coin game experiment are in agreement
 with the original hypothesis. In general, the robot correctly predicts
 the cognitive load that its operator was under in every
 scenario. These findings can be seen in Fig~\ref{fig:coder_eval_1_2}.
-Here, the horizontal axis denotes model estimated cognitive stress over time. The vertical axis denotes coder evaluation cognitive load estimate. From our experiments we have found that the cognitive load estimate from the robots using our model correlates with the coder evaluated stress level by a factor $\rho=.336$ and $\rho=.22$ for coin game played with one and two robots respectively. Our experiment also captures that posture and breathing rate of human operator as objective metric for estimating cognitive stress level.
+Here, the horizontal axis denotes model estimated cognitive stress over time. The vertical axis denotes coder evaluation cognitive load estimate. From our experiments we have found that the cognitive load estimate from the robots using our model correlates with the coder evaluated stress level by a factor $\rho=.336$ and $\rho=.22$ for coin game played with one and two robots respectively. Our experiment also captures that posture and breathing rate of human operator as objective metric for estimating cognitive stress level.We could not find any intersting pattern in other physiological objective metrics i.e. heart rate, ECG amplitude using our model and experimental setup. However, that does not mean that they do not capture cognitive stress level of human operator. A better model with more enriched $H$ vector of human behavior metric can certainly produce a better estimate that correlates more with those physiological metrics. But having a $H$ also means the robot can take more sophisticated input from human operators. Whereas in our case we have confined our experiment with simplistic robots.
+It is critical for interpreting the information in \ref{fig:final-results} to note that while the robot's cognitive load evaluation and the scoring technique for quantifying
+self-reported user stress both produce a result between zero and one
+\textit{their magnitudes are not directly comparable}.Whenever cognitive stress occurs or changes, the robot is able to recognize this increase for most cases in the
+tested scenarios, and the robot's evaluation agrees with self-reported
+user stress.
 
 \begin{figure}  
 \centering
@@ -586,12 +592,24 @@ Here, the horizontal axis denotes model estimated cognitive stress over time. Th
 \label{fig:coder_vs_posture}
 \end{figure}
 
-We could not find any intersting pattern in other physiological objective metrics i.e. heart rate, ECG amplitude using our model and experimental setup. However, that does not mean that they do not capture cognitive stress level of human operator. A better model with more enriched $H$ vector of human behavior metric can certainly produce a better estimate that correlates more with those physiological metrics. But having a $H$ also means the robot can take more sophisticated input from human operators. Whereas in our case we have confined our experiment with simplistic robots.
-It is critical for interpreting the information in \ref{fig:final-results} to note that while the robot's cognitive load evaluation and the scoring technique for quantifying
-self-reported user stress both produce a result between zero and one
-\textit{their magnitudes are not directly comparable}.Whenever cognitive stress occurs or changes, the robot is able to recognize this increase for most cases in the
-tested scenarios, and the robot's evaluation agrees with self-reported
-user stress.  In the context of this paper, it also supports the
+Most important contribution of our model can has been demonstrated from the perpective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success \ref{tab:task_success}.
+
+% Please add the following required packages to your document preamble:
+% \usepackage{booktabs}
+\begin{table}[]
+\centering
+\caption{Task success comparsions between autonomous assistance mood and manual mood. Automous assistance was activated on detection of high stress level predicted by our model.}
+\label{my-label}
+\begin{tabular}{@{}|c|c|c|c|c|@{}}
+\toprule
+Game Mood                                                                                  & \multicolumn{2}{c|}{Manual} & \multicolumn{2}{c|}{Auto} \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of\\ Robots in\\ Participated\end{tabular}               & one          & two          & one         & two         \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 2/12         & 5/15         & 0/10        & 1/10        \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Average time\\ per game\\ (in sec.)\end{tabular}                & 329          & 345          & 170         & 233         \\ \bottomrule
+\end{tabular}
+\end{table}
+
+In the context of this paper, it also supports the
 original hypothesis: robots can are able to reliably assess the
 cognitive strain their human partners are under, even in contexts
 where the actual tasks they are being asked to perform are opaque to
