--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -592,28 +592,25 @@ user stress.
 \label{fig:coder_vs_posture}
 \end{figure}
 
-Most important contribution of our model can has been demonstrated from the perpective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success \ref{tab:task_success}.
+Most important contribution of our model can has been demonstrated from the perpective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success Tab.\ref{tab:task_success}. Table \ref{tab:task_success} shows that dealing with more number of robots requires high cognitive labour for the human operator causing less winning rate and more time rquirement. However, when we provide autonomous assistance on detection of high stress level using our learned model which was learned from another task, it imrpoves overall task success.In the context of this paper, it also supports the original hypothesis: robots can are able to reliably assess the cognitive strain their human partners are under, even in contexts where the actual tasks they are being asked to perform are opaque to the robot.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
 \begin{table}[]
 \centering
-\caption{Task success comparsions between autonomous assistance mood and manual mood. Automous assistance was activated on detection of high stress level predicted by our model.}
-\label{my-label}
+\caption{Task success comparsions between au-
+tonomous assistance mood and manual mood. Au-
+tomous assistance was activated on detection of high
+stress level predicted by our model.}
+\label{tab:task_success}
 \begin{tabular}{@{}|c|c|c|c|c|@{}}
 \toprule
-Game Mood                                                                                  & \multicolumn{2}{c|}{Manual} & \multicolumn{2}{c|}{Auto} \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Number of\\ Robots in\\ Participated\end{tabular}               & one          & two          & one         & two         \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 2/12         & 5/15         & 0/10        & 1/10        \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Average time\\ per game\\ (in sec.)\end{tabular}                & 329          & 345          & 170         & 233         \\ \bottomrule
+Game Mood                                                                                  & \multicolumn{2}{c|}{Manual} & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Autonoumous \\ Assitance on high\\ Stress level\end{tabular}} \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of\\ Robots\\ Participated\end{tabular}               & one          & two          & one                                                   & two                                                  \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 2/12         & 5/15         & 0/10                                                  & 1/10                                                 \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Average time\\ per game\\ (in sec.)\end{tabular}                & 329          & 345          & 170                                                   & 233                                                  \\ \bottomrule
 \end{tabular}
 \end{table}
-
-In the context of this paper, it also supports the
-original hypothesis: robots can are able to reliably assess the
-cognitive strain their human partners are under, even in contexts
-where the actual tasks they are being asked to perform are opaque to
-the robot.
 
 %Six people who participated in first experiment also participated in
 %the second experiment. We have found that the learned model of
