Fixed spelling errors.

--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -122,8 +122,7 @@ without assistance, humans do not always assist robots as efficiently
 as they might, despite their superiority in context sensitivity and
 general intelligence.  Several issues arise in this regard
 \cite{breazeal2004social}, including obvious problems such as noisy
-communication between human operators and robots, accidental damage to
-robot sensors and so on.
+communication between human operators and robots, accidental damage to robot sensors and so on.
 
 In this paper, we focus on one problem which can cause difficulties in
 a human-robot team: the cognitive capacity of the human operator.
@@ -224,7 +223,7 @@ In another social experiment \cite{zheng2013supervisory}, where
 autonomous humanoid robots have been deployed to investigate their
 social acceptance, a scheduling algorithm has been used to assist the
 human operator.  This experiment developed an algorithm that
-prioritizes the assitance provided by a human operator for a
+prioritizes the assistance provided by a human operator for a
 particular robot within a multi-robot team. The robot's task was to
 make conversation with interested shopping mall customers and to guide
 them to particular shelves corresponding to their needs. The shopping
@@ -295,7 +294,7 @@ phase, the robot collected the data needed to build a model $g$ for
 evaluating the trustworthiness of user input $H$. The robot is able to
 do this for the first phase because in the case of the Maze Game it
 has access to $f$ and $E$ and can calculate $s$.  It understands the
-problem sufficiently to make such judgements; the robot requires no
+problem sufficiently to make such judgments; the robot requires no
 human aid to solve this problem.
 
 %\begin{figure}
@@ -561,7 +560,7 @@ In the coin game the human operator could interact with the robots using two int
 While using web interface, in order to compare the robot's estimate of cognitive capacity with
 reality, test subjects were asked during the experiment to rate their
 own cognitive stress levels at 12-second intervals using a Likert
-scale. The human operators who participated using Rviz were given a physilogical activity monitor\footnote{https://www.zephyranywhere.com/products/bioharness-3} to attach to their chest to monitor their heart rate, breathing rate, posture, ECG amplitudes and they were also being montitored by a human evaluator who rated and logged their cognitive stress level while they were playing the game. In other words human(coder) evaluator serves here as an subjective evaluator whreas the physiological metrics provides objective evaluation. We have found posture of human operator most likely correlates with subjective correlation with the code evaluation  Fig.\ref{fig:coder_vs_posture}. One possible reason behind this is that posture is one of the visible observation that the coder can have while evaluating the operator. The coder rated stress level high when the operator tends to lean toward the screen of the computer when he or lean back on the chair. Other physiological metrics does not higly correlates with coder evaluation of stress level.
+scale. The human operators who participated using Rviz were given a physiological activity monitor\footnote{https://www.zephyranywhere.com/products/bioharness-3} to attach to their chest to monitor their heart rate, breathing rate, posture, ECG amplitudes and they were also being montitored by a human evaluator who rated and logged their cognitive stress level while they were playing the game. In other words human(coder) evaluator serves here as an subjective evaluator whreas the physiological metrics provides objective evaluation. We have found posture of human operator most likely correlates with subjective correlation with the code evaluation  Fig.\ref{fig:coder_vs_posture}. One possible reason behind this is that posture is one of the visible observation that the coder can have while evaluating the operator. The coder rated stress level high when the operator tends to lean toward the screen of the computer when he or lean back on the chair. Other physiological metrics does not highly correlates with coder evaluation of stress level.
 
 \begin{figure}  
 \centering
@@ -593,16 +592,13 @@ user stress.
 \label{fig:coder_vs_posture}
 \end{figure}
 
-Most important contribution of our model can has been demonstrated from the perpective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success Tab.\ref{tab:task_success}. Table \ref{tab:task_success} shows that dealing with more number of robots requires high cognitive labour for the human operator causing less winning rate and more time rquirement. However, when we provide autonomous assistance on detection of high stress level using our learned model which was learned from another task, it imrpoves overall task success.In the context of this paper, it also supports the original hypothesis: robots can are able to reliably assess the cognitive strain their human partners are under, even in contexts where the actual tasks they are being asked to perform are opaque to the robot.
+Most important contribution of our model can has been demonstrated from the perspective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success Tab.\ref{tab:task_success}. Table \ref{tab:task_success} shows that dealing with more number of robots requires high cognitive labor for the human operator causing less winning rate and more time requirement. However, when we provide autonomous assistance on detection of high stress level using our learned model which was learned from another task, it improves overall task success.In the context of this paper, it also supports the original hypothesis: robots can are able to reliably assess the cognitive strain their human partners are under, even in contexts where the actual tasks they are being asked to perform are opaque to the robot.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
 \begin{table}[]
 \centering
-\caption{Task success comparsions between au-
-tonomous assistance mood and manual mood. Au-
-tomous assistance was activated on detection of high
-stress level predicted by our model.}
+\caption{Task success comparisons between autonomous assistance mood and manual mood. Autonomous assistance was activated on detection of high stress level predicted by our model.}
 \label{tab:task_success}
 \begin{tabular}{@{}|c|c|c|c|c|@{}}
 \toprule
@@ -666,7 +662,7 @@ important finding is that the threshold beyond which cognitive stress
 produces untrustworthy human assistance may vary from task to task.
 Nevertheless, general metrics can transfer from problem to problem and
 still produce meaningful evaluations.  In the future, we plan to
-extend this research into complex heterogenous teams of humans and
+extend this research into complex heterogeneous teams of humans and
 robots performing real-world tasks.
 
 Every day humans interact with more and more technologies that require
