Minor update to paper.

--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -43,10 +43,11 @@ navigation of a maze. The robot may then apply this learned model to a
 different problem while still being able to evaluate a human operator's
 cognitive load. Even without the ability to understand the end goal of this
 new task, the robot can use the indicators learned previously to estimate
-the cognitive limits of an increasingly frazzled human partner.. Perhaps
+the cognitive limits of an increasingly frazzled human partner. Perhaps
 even more importantly, the robot may then make an informed decision
 based on this assessment, switching to an autonomous operation mode for
-example, in an attempt to reduce operator demand.
+example, in an attempt to reduce operator demand. The ability to perform
+this switch significantly increased participant success rate.
 \end{abstract}
 
 %\category{I.2.9}{Robotics}{Human Assistance}{Multiple Robots}
